kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-app
  namespace: employee-app
  labels:
    app: employee-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-app
  template:
    metadata:
      labels:
        app: employee-app
    spec:
      containers:
        - name: employee-app
          image: hstefov/employee-app:latest
          ports:
            - containerPort: 8080
