kubernetes/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: employee-db
  namespace: employee-app
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      app: employee-db
  template:
    metadata:
      labels:
        app: employee-db
    spec:
      containers:
        - name: employee-db
          image: postgres:13  
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
