kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-app-service
  namespace: employee-app
spec:
  selector:
    app: employee-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
