kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: employee-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: employee-db
  type: ClusterIP
