kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-app-ingress
  namespace: employee-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: employee-app-devops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-app-service
                port:
                  number: 80
